--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,16 @@
 <h2 id="title">Welcome to Ember</h2>
 
+<ul>
+  {{#each model as |movie|}}
+  <li>
+    {{log model}}
+    {{movie.title}}
+    <p>
+      {{like-counter score=movie.score}}
+    </p>
+  </li>
+  {{/each}}
+</ul>
+
+
 {{outlet}}
